<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpeakerActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/photo"
        android:layout_width="@dimen/default_photo_size"
        android:layout_height="@dimen/default_photo_size"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/photo"
        app:civ_border_width="2dp"
        app:civ_border_color="#00000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/flag"
        android:layout_width="@dimen/flag_size"
        android:layout_height="@dimen/flag_size"
        android:src="@drawable/flag"
        app:civ_border_width="2dp"
        app:civ_border_color="#00000000"
        app:layout_constraintBottom_toBottomOf="@id/photo"
        app:layout_constraintEnd_toEndOf="@id/photo"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/speaker"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintStart_toEndOf="@id/photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/position"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toEndOf="@id/photo"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/location"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toEndOf="@id/photo"
        app:layout_constraintTop_toBottomOf="@id/position"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/twitter"
        android:layout_width="@dimen/twitter_icon_size"
        android:layout_height="@dimen/twitter_icon_size"
        android:src="@drawable/twitter"
        app:layout_constraintStart_toStartOf="@id/location"
        app:layout_constraintTop_toBottomOf="@id/location"/>

    <ImageView
        android:id="@+id/telegram"
        android:layout_width="@dimen/telegram_icon_width"
        android:layout_height="@dimen/telegram_icon_height"
        android:src="@drawable/telegram"
        app:layout_constraintStart_toEndOf="@id/twitter"
        app:layout_constraintTop_toBottomOf="@id/location"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/description_text"
        android:textSize="@dimen/subtitle_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/presentationName"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/room"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/room"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/categoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@android:color/holo_red_light"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:text="@string/category"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/time"
            android:textSize="@dimen/subtitle_text_size"
            app:layout_constraintTop_toBottomOf="@id/categoryButton"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/date"
            android:textSize="@dimen/subtitle_text_size"
            app:layout_constraintTop_toBottomOf="@id/categoryButton"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintBaseline_toBaselineOf="@id/time"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>